# tiredize

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.context/: PROJECT.md  PYTHON.md
.context/issues/: add-docstrings.md  configuration-strategy.md  container-element-model.md  dead-code-cleanup.md  document-parse-slug-bug.md  fix-config-int-bool-guard.md  fix-relative-url-resolution.md  fix-slug-non-ascii.md  frontmatter-schema.md  gfm-compliance-audit.md  gfm-emphasis.md  gfm-hard-line-break.md  gfm-html-block.md  gfm-indented-code-block.md  gfm-parity.md  gfm-setext-heading.md  gfm-strikethrough.md  gfm-task-list.md  gfm-thematic-break.md  issue-markdown-schema-validation.md  issue-parser-robustness.md  linter-rules-spec.md  markdown-schema-validation.md  parser-greedy-regex.md  parser-robustness.md  parser-sanitization-audit.md  parser-sanitization-gaps.md  quoteblock-over-sanitization.md  relative-url-prefix-handling.md  sanitize-text-newline-bug.md  table-header-empty-indexerror.md  table-internal-sanitization.md  test-coverage-audit.md  test-coverage-linter-rules.md  test-coverage-linter-utils-engine.md  test-coverage-markdown-types.md  test-coverage-markdown-utils.md  tooling-migration.md
.context/schemas/: issue-frontmatter.yaml  issue-markdown.yaml  issue.yaml
.context/specifications/: linter.md  (+21 more)
tests/: test_cli.py  test_code.py  test_codeblock.py  test_codeinline.py  test_document.py  test_front_matter_validator.py  test_frontmatter.py  test_header.py  test_headers.py  test_image.py  test_images.py  test_line_length_validator.py  test_markdown_schema_loader.py  test_markdown_structure_validator.py  test_parser.py  test_quoteblock.py  test_quoteblocks.py  test_rule_runner.py  test_table.py  test_whitespace_validator.py
tiredize/: __main__.py  cli.py  core_types.py  document.py  markdown_schema.py  rule_runner.py  types.py
(+82 files in other folders)
