[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
authors = [
  { name = "Adam Przybyszewski" }
]
description = "Configurable schema/linter validation for markdown docs"
homepage = "https://www.tired-labs.org/"
license = { file = "LICENSE" }
name = "tiredize"
readme = "README.md"
repository = "https://github.com/tired-labs/tiredize"
requires-python = ">=3.10"
version = "0.0.1"

dependencies = [
  "PyYAML>=6.0",
]

[tool.hatch.build.targets.wheel]
packages = ["tiredize"]

[project.scripts]
tiredize = "tiredize.cli:main"
