[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
authors = [
  { name = "Adam Przybyszewski" }
]
description = "Configurable schema/linter validation for markdown docs"
license = { file = "LICENSE" }
name = "tiredize"
readme = "README.md"
requires-python = ">=3.10"
version = "0.0.3"
dependencies = [
  "PyYAML>=6.0",
]

[project.urls]
homepage = "https://www.tired-labs.org/"
repository = "https://github.com/tired-labs/tiredize"


[tool.hatch.build.targets.wheel]
packages = ["tiredize"]

[project.scripts]
tiredize = "tiredize.cli:main"
